[FLINK-33161] Java17 profile for benchmarking